package NewImplementations.FactoryPattern;
/**
 * This is the Condiment.
 * This class is a product extends
 */
public class Condiment extends Product {
    public Condiment(String name, double price) {
        super(name, price);
    }
}
