package NewImplementations.FactoryPattern;

/**
 * This is the Drink class.
 * This class is a product extends
 */
public class Drink extends Product {
    public Drink(String name, double price) {
        super(name, price);
    }
}
